# gbrl-rs

./: Cargo.toml  README.md  package-lock.json  package.json
angular-ui/: package-lock.json  package.json
angular-ui/.angular/cache/19.2.21/meshforge-angular-ui/: .tsbuildinfo
angular-ui/src/app/: app.component.ts
angular-ui/src/app/components/: index.ts
angular-ui/src/app/components/command-button/: command-button.component.ts
angular-ui/src/app/components/exact-position-form/: exact-position-form.component.ts
angular-ui/src/app/components/gcode-visualizer/: gcode-visualizer.component.ts
angular-ui/src/app/components/job-command/: job-command.component.ts
angular-ui/src/app/components/job-config/: job-config.component.ts
angular-ui/src/app/components/job-config-tabs/: job-config-tabs.component.ts
angular-ui/src/app/components/jog-controls/: jog-controls.component.ts
angular-ui/src/app/components/jog-speed-controls/: jog-speed-controls.component.ts
angular-ui/src/app/components/main-menu/: main-menu.component.ts
angular-ui/src/app/components/probe-tab/: probe-tab.component.ts
angular-ui/src/app/components/run-job-panel/: run-job-panel.component.ts
angular-ui/src/app/components/slider/: slider.component.ts
angular-ui/src/app/components/webgl-preview/: webgl-preview.component.ts
src/: lib.rs  main.rs
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs
src/machines/grbl/: commands.rs  machine.rs  mod.rs  motion.rs  parser.rs  poller.rs  port.rs  state.rs  streamer.rs
src/machines/session/: mod.rs
ui/: index.html  main.js
(+3 files in other folders)
