[package]
name = "grbl-rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable for serial port (port.rs); requires system libudev on Linux.
serial = ["serialport"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serialport = { version = "4.3", optional = true }
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
